--- a/demo/Movieous/app/src/main/res/layout/activity_playback.xml
+++ b/demo/Movieous/app/src/main/res/layout/activity_playback.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/black">
 
-    <com.movieous.media.view.player.VideoPlayerView
+    <video.movieous.droid.player.ui.widget.VideoView
         android:id="@+id/video_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/black" />
-
+        app:useTextureViewBacking="true" />
 
     <ProgressBar
         android:id="@+id/progressBar"
