--- a/demo/Movieous/app/src/main/res/layout/view_video_cut.xml
+++ b/demo/Movieous/app/src/main/res/layout/view_video_cut.xml
@@ -23,6 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp">
 
         <com.movieous.media.view.TileView
