--- a/demo/MovieousShortVideoDemo/app/src/main/res/layout/activity_video_edit.xml
+++ b/demo/MovieousShortVideoDemo/app/src/main/res/layout/activity_video_edit.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_dark">
+    android:background="@android:color/background_dark"
+    android:keepScreenOn="true">
 
     <video.movieous.engine.view.UTextureView
         android:id="@+id/render_view"
