--- a/demo/MovieousShortVideoDemo/app/src/main/res/layout/activity_video_trim.xml
+++ b/demo/MovieousShortVideoDemo/app/src/main/res/layout/activity_video_trim.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:keepScreenOn="true">
 
     <video.movieous.engine.view.UTextureView
         android:id="@+id/render_view"
@@ -50,14 +51,14 @@
         android:id="@+id/check_audio_track"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/priview_trim_video"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="10dp"
-        android:layout_below="@id/priview_trim_video"
         android:checked="false"
         android:gravity="center_vertical"
         android:text="关闭音频"
-        android:textSize="15sp"
-        android:textColor="@color/colorAccent" />
+        android:textColor="@color/colorAccent"
+        android:textSize="15sp" />
 
     <TextView
         android:id="@+id/tv_tip"
