--- a/demo/MovieousShortVideoDemo/app/src/main/res/values/colors.xml
+++ b/demo/MovieousShortVideoDemo/app/src/main/res/values/colors.xml
@@ -3,4 +3,18 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="white">#FFFFFF</color>
+
+    <color name="text_color1">#FFFFFF</color>
+    <color name="text_color2">#ffefa8</color>
+    <color name="text_color3">#fccaff</color>
+    <color name="text_color4">#61dcff</color>
+    <color name="text_color5">#ffc502</color>
+    <color name="text_color6">#ff8621</color>
+    <color name="text_color7">#ff696a</color>
+    <color name="text_color8">#7777ff</color>
+    <color name="text_color9">#ff8621</color>
+    <color name="text_color10">#00ff00</color>
+    <color name="text_color11">#ff0000</color>
+    <color name="text_color12">#0000ff</color>
 </resources>
